SUBDIRS = customBitmaps

bitmapsdir = $(datadir)/tsim/bitmaps

dist_bitmaps_DATA = HorizontalRail    NoRail            UpLeftRail         \
 DownEngine         HorizontalSensor  RightEngine       UpLeftSensor       \
 DownEngineMask     LeftEngine        RightEngineMask   UpRightRail        \
 DownLeftRail       LeftEngineMask    RightStopRail     UpRightSensor      \
 DownLeftSensor     LeftStopRail      RightSwitchDown   UpStopRail         \
 DownRightRail      LeftSwitchDown    RightSwitchLeft   VerticalCar        \
 DownRightSensor    LeftSwitchLeft    RightSwitchRight  VerticalCarMask    \
 DownStopRail       LeftSwitchRight   RightSwitchUp     VerticalRail       \
 HorizontalCar      LeftSwitchUp      UpEngine          VerticalSensor     \
 HorizontalCarMask  UpEngineMask

